[gd_scene load_steps=12 format=2]

[ext_resource path="res://Presets/Fuente_pequeña.tres" type="DynamicFont" id=1]
[ext_resource path="res://Presets/BotonComunTema.tres" type="Theme" id=2]
[ext_resource path="res://Objetos/PanelDificultad.gd" type="Script" id=3]
[ext_resource path="res://Recursos/Sonidos/click2.mp3" type="AudioStream" id=4]
[ext_resource path="res://Presets/stylebox_focus.tres" type="StyleBox" id=5]
[ext_resource path="res://Presets/stylebox_disabled.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.87451, 0.305882, 0.211765, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.854902, 0.501961, 0.501961, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_color = Color( 0.116211, 0.0806894, 0.0806894, 0.6 )
shadow_size = 4
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.811765, 0.180392, 0.0745098, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.87451, 0.305882, 0.211765, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_color = Color( 0.116211, 0.0806894, 0.0806894, 0.6 )
shadow_size = 4
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.811765, 0.180392, 0.0745098, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.854902, 0.501961, 0.501961, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
shadow_color = Color( 0.116211, 0.0806894, 0.0806894, 0.6 )
shadow_size = 4
shadow_offset = Vector2( 0, 2 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Recursos/Fuentes/steelfish bd.otf"

[sub_resource type="DynamicFont" id=9]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_char = 2
font_data = SubResource( 8 )

[node name="panelDificultad" type="Control"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -112.5
margin_right = 190.0
margin_bottom = 112.5
theme = ExtResource( 2 )

[node name="salir" type="Button" parent="Panel"]
margin_left = 8.0
margin_top = 7.5
margin_right = 40.0
margin_bottom = 44.5
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = SubResource( 10 )
text = "X"

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 13.0
margin_right = 50.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 1 )
text = "Elegir Dificultad"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -59.0
margin_right = 141.0
margin_bottom = -7.0
custom_constants/separation = 8

[node name="facilBoton" type="Button" parent="Panel/HBoxContainer"]
margin_right = 69.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 9 )
toggle_mode = true
text = "  Fácil  "

[node name="interBoton" type="Button" parent="Panel/HBoxContainer"]
margin_left = 77.0
margin_right = 193.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 9 )
toggle_mode = true
text = "  Intermedio  "

[node name="dificilBoton" type="Button" parent="Panel/HBoxContainer"]
margin_left = 201.0
margin_right = 282.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 9 )
toggle_mode = true
text = "  Difícil  "

[node name="okNoton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.5
margin_top = -68.5
margin_right = 38.5
margin_bottom = -16.5
disabled = true
text = "   Ok   "

[node name="click_sonido" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 2.59

[connection signal="pressed" from="Panel/salir" to="." method="_on_salir_pressed"]
[connection signal="toggled" from="Panel/HBoxContainer/facilBoton" to="." method="_on_facilBoton_toggled"]
[connection signal="toggled" from="Panel/HBoxContainer/interBoton" to="." method="_on_interBoton_toggled"]
[connection signal="toggled" from="Panel/HBoxContainer/dificilBoton" to="." method="_on_dificilBoton_toggled"]
[connection signal="pressed" from="Panel/okNoton" to="." method="_on_okNoton_pressed"]
